--- a/Pipfile
+++ b/Pipfile
@@ -3,14 +3,13 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-
 [dev-packages]
-
 
 [packages]
 google-cloud-storage = "==1.16.1"
 pytest = "==4.6.3"
-
+setuptools = "==46.1.3"
+twine = "==3.1.1"
 
 [requires]
 python_version = "3.6"
