--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           if [ "$CIRCLE_BRANCH" = "develop" ]; then
             make build beta_tag_suffix=""
           else
-            make build beta_tag_suffix="-$CIRCLE_BRANCH"
+            make build beta_tag_suffix="-${$CIRCLE_BRANCH//[-_]/}"
           fi
       - persist_to_workspace:
           root: .
