--- a/Pipfile
+++ b/Pipfile
@@ -1,15 +1,16 @@
 [[source]]
-name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
+name = "pypi"
+
+[packages]
+google-cloud-storage = "~=2.4.0"
+pre-commit = "~=2.19.0"
+pytest = "~=7.1.2"
+setuptools = "~=62.4.0"
+twine = "~=4.0.1"
 
 [dev-packages]
 
-[packages]
-google-cloud-storage = "==1.32.0"
-pytest = "==4.6.3"
-setuptools = "==46.1.3"
-twine = "==3.1.1"
-
 [requires]
-python_version = "3.6"
+python_version = "3.10"
