--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,7 @@ version: 2.1
 commands:
   setup:
     steps:
-      - setup_remote_docker:
-          version: 20.10.14
+      - setup_remote_docker
       - checkout
       - run: pipenv install
 executors:
